--- a/BasicEvaluatorLib/BasicEvaluatorLib.csproj
+++ b/BasicEvaluatorLib/BasicEvaluatorLib.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6A2D0427-AD7B-4BB4-9229-477AB92058C6}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{CD153003-7156-4A55-9A1B-1EFD2CB6080A}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WadlerEvaluatorApp</RootNamespace>
-    <AssemblyName>WadlerEvaluatorApp</AssemblyName>
+    <RootNamespace>BasicEvaluatorLib</RootNamespace>
+    <AssemblyName>BasicEvaluatorLib</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -41,17 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Constant.cs" />
+    <Compile Include="Div.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\WadlerEvaluatorLib\WadlerEvaluatorLib.csproj">
-      <Project>{ca13f8ad-1b1e-49b7-8e17-d11183b22ec7}</Project>
-      <Name>WadlerEvaluatorLib</Name>
-    </ProjectReference>
+    <Compile Include="Term.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
