--- a/MonadicEvaluatorLib/MonadicEvaluatorLib.csproj
+++ b/MonadicEvaluatorLib/MonadicEvaluatorLib.csproj
@@ -35,8 +35,9 @@
     <Reference Include="Flinq">
       <HintPath>..\packages\Flinq.1.0.2.0\lib\net40-Client\Flinq.dll</HintPath>
     </Reference>
-    <Reference Include="MonadLib">
-      <HintPath>..\packages\MonadLib.1.0.1.0\lib\net45\MonadLib.dll</HintPath>
+    <Reference Include="MonadLib, Version=1.1.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\MonadLib.1.1.1.0\lib\net45\MonadLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
